--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "less-loader": "^2.2.0",
     "node-libs-browser": "^0.5.0",
     "style-loader": "^0.12.2",
-    "webpack": "^1.9.7",
-    "webpack-dev-server": "^1.8.2"
+    "webpack": "^1.10.1"
   },
   "dependencies": {
     "dom-align": "^1.0.5",
+    "object-assign": "^3.0.0",
+    "rc-dialog": "^4.4.0",
     "react": "^0.13.3"
   }
 }
