--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
   },
   "homepage": "https://github.com/uxcore/uxcore-dialog",
   "devDependencies": {
-    "babel-core": "^5.4.3",
-    "babel-loader": "^5.1.2",
+    "babel-core": "^5.6.18",
+    "babel-loader": "^5.3.1",
     "css-loader": "^0.13.1",
-    "less": "^2.5.0",
+    "file-loader": "^0.8.4",
+    "less": "^2.5.1",
     "less-loader": "^2.2.0",
-    "node-libs-browser": "^0.5.0",
-    "style-loader": "^0.12.2",
+    "node-libs-browser": "^0.5.2",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.10.1"
   },
   "dependencies": {
-    "dom-align": "^1.0.5",
+    "dom-align": "^1.0.8",
     "object-assign": "^3.0.0",
-    "rc-dialog": "^4.4.0",
+    "rc-dialog": "^4.4.1",
     "react": "^0.13.3"
   }
 }
