--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^5.3.1",
     "css-loader": "^0.13.1",
     "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^1.6.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "node-libs-browser": "^0.5.2",
