--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "gulp-just-replace": "~1.0.2",
     "gulp-less": "~3.0.3",
     "gulp-sourcemaps": "~1.5.2",
+    "react": "~0.14.0",
+    "react-dom": "~0.14.0",
     "webpack": "^1.10.5"
   },
   "dependencies": {
@@ -42,8 +44,7 @@
     "object-assign": "^2.0.0",
     "rc-dialog": "~5.0.3",
     "rc-util": "~2.0.3",
-    "react": "^0.13.3",
     "uxcore-button": "^0.3.0",
-    "uxcore-kuma": "~1.0.6"
+    "uxcore-kuma": "^1.1.0"
   }
 }
