--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-dialog",
- "version": "0.3.3",
+ "version": "0.3.4",
  "description": "uxcore-dialog ui componment for react",
  "main": "build/index.js",
  "scripts": {
@@ -48,6 +48,7 @@
   "gulp-sourcemaps": "~1.5.2",
   "html-wiring": "~1.2.0",
   "inquirer": "^0.12.0",
+  "kuma-base": "~1.0.1",
   "react": "~0.14.0",
   "react-dom": "~0.14.0",
   "webpack": "^1.10.5"
