--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
- "name": "uxcore-dialog",
- "version": "0.3.4",
- "description": "uxcore-dialog ui componment for react",
- "main": "build/index.js",
- "scripts": {
-  "dev": "gulp server",
-  "build": "webpack --config webpack.build.js",
-  "deploy": "git subtree push --prefix build origin gh-pages"
- },
- "repository": {
-  "type": "git",
-  "url": "https://github.com/uxcore/uxcore-dialog.git"
- },
- "keywords": [
-  "react",
-  "react-component",
-  "react-uxcore-dialog",
-  "uxcore-dialog"
- ],
- "author": "vincent.bian",
- "license": "MIT",
- "bugs": {
-  "url": "https://github.com/uxcore/uxcore-dialog/issues"
- },
- "homepage": "https://github.com/uxcore/uxcore-dialog",
- "devDependencies": {
-  "babel": "~6.3.26",
-  "babel-core": "~6.4.0",
-  "babel-loader": "~6.2.1",
-  "babel-plugin-add-module-exports": "~0.1.2",
-  "babel-preset-es2015": "~6.3.13",
-  "babel-preset-es2015-loose": "~7.0.0",
-  "babel-preset-react": "~6.3.13",
-  "babel-preset-stage-1": "~6.3.13",
-  "browser-sync": "~2.11.0",
-  "colors": "^1.1.2",
-  "console-polyfill": "~0.2.1",
-  "cross-spawn": "^2.1.5",
-  "es3ify-loader": "~0.1.0",
-  "es5-shim": "~4.1.10",
-  "gulp": "~3.9.0",
-  "gulp-babel": "~6.1.1",
-  "gulp-concat": "~2.6.0",
-  "gulp-es3ify": "0.0.0",
-  "gulp-just-replace": "~1.0.2",
-  "gulp-less": "~3.0.3",
-  "gulp-sourcemaps": "~1.5.2",
-  "html-wiring": "~1.2.0",
-  "inquirer": "^0.12.0",
-  "kuma-base": "~1.0.1",
-  "react": "~0.14.0",
-  "react-dom": "~0.14.0",
-  "webpack": "^1.10.5"
- },
- "dependencies": {
-  "classnames": "^2.1.2",
-  "object-assign": "^4.0.0",
-  "rc-dialog": "~5.4.0",
-  "rc-util": "~2.0.3",
-  "uxcore-button": "~0.4.0"
- }
+  "name": "uxcore-dialog",
+  "version": "0.3.4",
+  "description": "uxcore-dialog ui componment for react",
+  "main": "build/index.js",
+  "scripts": {
+    "dev": "gulp server",
+    "build": "webpack --config webpack.build.js",
+    "deploy": "git subtree push --prefix build origin gh-pages"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uxcore/uxcore-dialog.git"
+  },
+  "keywords": [
+    "react",
+    "react-component",
+    "react-uxcore-dialog",
+    "uxcore-dialog"
+  ],
+  "author": "vincent.bian",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/uxcore/uxcore-dialog/issues"
+  },
+  "homepage": "https://github.com/uxcore/uxcore-dialog",
+  "devDependencies": {
+    "babel": "~6.3.26",
+    "babel-core": "~6.4.0",
+    "babel-loader": "~6.2.1",
+    "babel-plugin-add-module-exports": "~0.1.2",
+    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-es2015-loose": "~7.0.0",
+    "babel-preset-react": "~6.3.13",
+    "babel-preset-stage-1": "~6.3.13",
+    "browser-sync": "~2.11.0",
+    "colors": "^1.1.2",
+    "console-polyfill": "~0.2.1",
+    "cross-spawn": "^2.1.5",
+    "es3ify-loader": "~0.1.0",
+    "es5-shim": "~4.1.10",
+    "gulp": "~3.9.0",
+    "gulp-babel": "~6.1.1",
+    "gulp-concat": "~2.6.0",
+    "gulp-es3ify": "0.0.0",
+    "gulp-just-replace": "~1.0.2",
+    "gulp-less": "~3.0.3",
+    "gulp-sourcemaps": "~1.5.2",
+    "html-wiring": "~1.2.0",
+    "inquirer": "^0.12.0",
+    "kuma-base": "~1.0.1",
+    "react": "~0.14.0",
+    "react-dom": "~0.14.0",
+    "uxcore-kuma": "^2.0.13",
+    "webpack": "^1.10.5"
+  },
+  "dependencies": {
+    "classnames": "^2.1.2",
+    "object-assign": "^4.0.0",
+    "rc-dialog": "~5.4.0",
+    "rc-util": "~2.0.3",
+    "uxcore-button": "~0.4.0"
+  }
 }
