--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-dialog",
- "version": "0.6.0",
+ "version": "0.6.1",
  "description": "uxcore-dialog ui componment for react",
  "main": "build/index.js",
  "scripts": {
@@ -45,7 +45,7 @@
   "react": "0.14.x",
   "react-addons-test-utils": "0.14.x",
   "react-dom": "0.14.x",
-  "uxcore-kuma": "2.x",
+  "uxcore-kuma": "*",
   "uxcore-tools": "0.2.x"
  },
  "dependencies": {
