--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
- "name": "uxcore-dialog",
- "version": "0.7.13",
- "description": "uxcore-dialog ui componment for react",
- "main": "build/index.js",
- "scripts": {
-  "start": "uxcore-tools run start",
-  "server": "uxcore-tools run server",
-  "lint": "uxcore-tools run lint",
-  "build": "uxcore-tools run build",
-  "test": "uxcore-tools run test",
-  "coverage": "uxcore-tools run coverage",
-  "pub": "uxcore-tools run pub",
-  "dep": "uxcore-tools run dep",
-  "tnpm-dep": "uxcore-tools run tnpm-dep",
-  "chrome": "uxcore-tools run chrome",
-  "browsers": "uxcore-tools run browsers",
-  "saucelabs": "uxcore-tools run saucelabs",
-  "update": "uxcore-tools run update",
-  "tnpm-update": "uxcore-tools run tnpm-update"
- },
- "repository": {
-  "type": "git",
-  "url": "https://github.com/uxcore/uxcore-dialog.git"
- },
- "keywords": [
-  "react",
-  "react-component",
-  "react-uxcore-dialog",
-  "uxcore-dialog"
- ],
- "author": "vincent.bian",
- "license": "MIT",
- "bugs": {
-  "url": "https://github.com/uxcore/uxcore-dialog/issues"
- },
- "homepage": "https://github.com/uxcore/uxcore-dialog",
- "devDependencies": {
-  "console-polyfill": "^0.2.2",
-  "enzyme": "^3.0.0",
-  "enzyme-adapter-react-15": "^1.0.0",
-  "es5-shim": "^4.5.8",
-  "expect.js": "~0.3.1",
-  "jquery": "^3.2.1",
-  "kuma-base": "1.x",
-  "react": "15.x",
-  "react-dom": "15.x",
-  "react-test-renderer": "15.x",
-  "uxcore-kuma": "*",
-  "uxcore-tools": "0.2.x"
- },
- "dependencies": {
-  "classnames": "^2.1.2",
-  "object-assign": "^4.0.0",
-  "prop-types": "15.x",
-  "rc-dialog": "~6.5.0",
-  "uxcore-button": "~0.4.0",
-  "uxcore-icon": "^0.1.6"
- }
+  "name": "uxcore-dialog",
+  "version": "0.8.0",
+  "description": "uxcore-dialog ui componment for react",
+  "main": "build/index.js",
+  "scripts": {
+    "start": "uxcore-tools run start",
+    "server": "uxcore-tools run server",
+    "lint": "uxcore-tools run lint",
+    "build": "uxcore-tools run build",
+    "test": "uxcore-tools run test",
+    "coverage": "uxcore-tools run coverage",
+    "pub": "uxcore-tools run pub",
+    "dep": "uxcore-tools run dep",
+    "tnpm-dep": "uxcore-tools run tnpm-dep",
+    "chrome": "uxcore-tools run chrome",
+    "browsers": "uxcore-tools run browsers",
+    "saucelabs": "uxcore-tools run saucelabs",
+    "update": "uxcore-tools run update",
+    "tnpm-update": "uxcore-tools run tnpm-update"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uxcore/uxcore-dialog.git"
+  },
+  "keywords": [
+    "react",
+    "react-component",
+    "react-uxcore-dialog",
+    "uxcore-dialog"
+  ],
+  "author": "vincent.bian",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/uxcore/uxcore-dialog/issues"
+  },
+  "homepage": "https://github.com/uxcore/uxcore-dialog",
+  "devDependencies": {
+    "console-polyfill": "^0.2.2",
+    "enzyme": "^3.0.0",
+    "expect.js": "~0.3.1",
+    "jquery": "^3.2.1",
+    "kuma-base": "1.x",
+    "react": "16.x",
+    "react-dom": "16.x",
+    "react-test-renderer": "16.x",
+    "uxcore-kuma": "*",
+    "uxcore-tools": "^0.3.0",
+    "babel-polyfill": "6.x"
+  },
+  "dependencies": {
+    "classnames": "^2.1.2",
+    "object-assign": "^4.0.0",
+    "prop-types": "15.x",
+    "rc-dialog": "~7.1.0",
+    "react-lifecycles-compat": "^3.0.4",
+    "uxcore-button": "~0.4.0",
+    "uxcore-icon": "^0.1.6"
+  }
 }
