--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prop-types": "15.x",
     "rc-dialog": "~7.1.0",
     "uxcore-button": "~0.4.0",
-    "uxcore-icon": "^0.1.6"
+    "uxcore-icon": "^0.1.6",
+    "uxcore-config-provider": "^0.1.0"
   }
 }
